--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,5 +2,8 @@
     "name":"name",
     "lastName":"Last name",
     "oto":"Oto",
-    "avlokhashvili":"Avlokhashvili"
+    "avlokhashvili":"Avlokhashvili",
+    "login":"Login",
+    "save":"Save",
+    "register":"Register"
 }
