--- a/src/assets/i18n/geo.json
+++ b/src/assets/i18n/geo.json
@@ -2,5 +2,8 @@
     "name":"სახელი",
     "lastName":"გვარი",
     "oto":"ოთო",
-    "avlokhashvili":"ავლოხაშვილი"
+    "avlokhashvili":"ავლოხაშვილი",
+    "login":"ლოგინი",
+    "save":"შენახვა",
+    "register":"რეგისტრაცია"
 }
