feat-registration-login-guard

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,5 +5,10 @@
     "avlokhashvili":"Avlokhashvili",
     "login":"Login",
     "save":"Save",
-    "register":"Register"
+    "register":"Register",
+    "password-invalid":"Invalid password",
+    "email-invalid":"Invalid Email",
+    "nonExistent":"Email is not registered",
+    "email":"Email",
+    "password":"Password"
 }
